# atticus-demo

./: .gitignore  DEPLOYMENT.md  Dockerfile  GOLDEN_RETRIEVER_2_IMPLEMENTATION_SUMMARY.md  LOVABLE_INTEGRATION_GUIDE.md  Procfile  README.md  api.py  frontend_test.html  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  run_expiry_tests.sh  setup.py  test_deploy.py  test_endpoints.py  test_gr2_integration.py  test_price_formatting.py  test_setup.py  vite.config.ts
backend/: advanced_pricing_engine.py  api.py  api_gr2.py  binance_client.py  coinbase_client.py  config.py  cors_config.py  data_feed_manager.py  data_hub.py  dynamic_pricing.py  frontend_interface.py  kraken_client.py  main.py  main_app.py  ml_volatility_engine.py  okx_client.py  regime_detector.py  requirments.txt  sentiment_analyzer.py  trade_executor.py  utils.py  volatility_engine.py  websocket_server.py  ws_price.py
frontend/components/: StatusBanner.tsx
frontend/hooks/: useChat.ts
frontend/utils/: fetchWithRetry.ts
gr2/: README.md  __init__.py  analogies.json  config.py  embed_kb.py  frontend_integration.js  kb_growth.py  loop_guard.py  post_processor.py  screen_rag.py
myenv/: pyvenv.cfg
myenv_py311/: pyvenv.cfg
sandbox/: __init__.py
sandbox/api/: websocket_extension.py
sandbox/config/: sandbox_config.py  synthetic_accounts.json
src/: vite-env.d.ts
tests/: test_api_endpoints.py  test_auto_hedge_modal.tsx  test_expiry_changes.py  test_sandbox_api.py  test_sandbox_endpoints.py  test_sandbox_integration.py  test_sandbox_trade_execution.py
(+34 files in other folders)
